--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: cyan;
+    background-color: rgb(14, 82, 207);
 }
 
 #root {
@@ -16,4 +16,5 @@ body {
 #root canvas {
     display: block;
     margin: 0 auto;
+    border: 4px solid white
 }
